--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+
+      <!-- Шапка -->
+    <header> 
+    <nav>
+    <a href="/"> <span class="accent">Web</span> <span class="logo">Studio</span></a>
+    <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li><a href="Контакты" class="link">Контакты</a></li>
+    </ul>
+    </nav>
+    <ul class="auth-nav list">
+            <li><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
+    </ul>
+    </header>
+   
+ <!-- Герой -->
+ <main>
+         <ul>
+             <li>
+                <button type="button" class="button primary">Все</button>
+             </li>
+             <li>
+                <button type="button" class="button">Веб-сайты</button>
+             </li>
+             <li>
+                <button type="button" class="button">Приложения</button>
+             </li>
+             <li>
+                <button type="button" class="button">Дизайн</button>
+             </li>
+             <li>
+                <button type="button" class="button">Маркетинг</button>
+             </li>
+         </ul>
+
+     <!-- Варианты -->
+     <section>
+         <ul>
+             <li>
+                <img src="./images/portfolio6.jpg" alt="ноутбук" width="370">
+                <h2 class="section-title">Технокряк</h2>
+                <p>Веб-сайт</p>
+             </li>
+             <li>
+                <img src="./images/portfolio1.jpg" alt="два парня играют мячом в баскетбол" width="370">
+                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>  
+             </li>
+             <li>
+                <img src="./images/portfolio2.jpg" alt="логотип ресторана" width="370">
+                <h2 class="section-title">Ресторан Seafood</h2>
+                <p>Приложение</p>
+             </li>
+             <li>
+                <img src="./images/portfolio3.jpg" alt="наушники" width="370">
+                <h2 class="section-title">Проект Prime</h2>
+                <p>Маркетинг</p>
+             </li>
+             <li>
+                <img src="./images/portfolio4.jpg" alt="одна коричневая и одна белая коробочки" width="370">
+                <h2 class="section-title">Проект Boxes</h2>
+                <p>Приложение</p>
+             </li>
+             <li>
+                <img src="./images/portfolio5.jpg" alt="монитор" width="370">
+                <h2 class="section-title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+             </li>
+             <li>
+                <img src="./images/portfolio7.jpg" alt="книга" width="370">
+                <h2 class="section-title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+             </li>
+             <li>
+                <img src="./images/portfolio8.jpg" alt="белая бирка с английскими буквами на коричневой веревке" width="370">
+                <h2 class="section-title">Проект LAB</h2>
+                <p>Маркетинг</p>
+             </li>
+             <li>
+                <img src="./images/portfolio9.jpg" alt="две руки лежат на клавиатуре ноутбука" width="370">
+                <h2 class="section-title">Growing Business</h2>
+                <p>Приложение</p>
+             </li>
+         </ul>
+     </section>
+ </main>
+   
+   <!-- Футер -->
+   <footer>
+       <a href="/"> <span class="accent">Web</span> <span class="">Studio</span> </a>
+           <address>
+               <ul>
+                   <li>
+                       <a href="г.Киев,пр-тЛесиУкраинки,26 ">г. Киев, пр-т Леси Украинки, 26 <br/></a>
+                   </li>
+                   <li>
+                       <a href="info@example.com">info@example.com</a>
+                   </li>
+                   <li>
+                       <a href="+380991111111">+38 099 111 11 11</a>
+                   </li>
+               </ul>
+           </address>
+   </footer>
     
 </body>
 </html>
