--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -14,13 +14,13 @@
      <nav>
     <a href="/"> <span class="accent">Web</span> <span class="logo">Studio</span></a>
      <ul class="site-nav list">
-         <li><a href="Студия" class="link">Студия</a></li>
+         <li><a href="./index.html" class="link current">Студия</a></li>
          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
          <li><a href="Контакты" class="link">Контакты</a></li>
      </ul>
     </nav>
     <ul class="auth-nav list">
-         <li><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+         <li><a href="info@devstudio.com" class="link current">info@devstudio.com</a></li>
          <li><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
      </ul>
     </header>
