--- a/portfolio.html
+++ b/portfolio.html
@@ -32,16 +32,16 @@
                 <button type="button" class="button primary">Все</button>
              </li>
              <li>
-                <button type="button" class="button">Веб-сайты</button>
+                <button type="button" class="button secondary">Веб-сайты</button>
              </li>
              <li>
-                <button type="button" class="button">Приложения</button>
+                <button type="button" class="button secondary">Приложения</button>
              </li>
              <li>
-                <button type="button" class="button">Дизайн</button>
+                <button type="button" class="button secondary">Дизайн</button>
              </li>
              <li>
-                <button type="button" class="button">Маркетинг</button>
+                <button type="button" class="button secondary">Маркетинг</button>
              </li>
          </ul>
 
