--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -27,7 +30,7 @@
 
  <main>
  <!-- Герой -->
-<section class="hero">
+<section class="hero works">
     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
     <button type="button" class="button primary">Заказать услугу</button>
 </section>
@@ -37,7 +40,7 @@
      <ul class="feature-list">
          <li>
              <h3 class="title">Внимание к деталям</h3>
-             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+             <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
          </li> 
          <li>
              <h3 class="title"> Пунктуальность</h3>
@@ -57,7 +60,7 @@
  <!-- Примеры -->
  <section class="section">
      <h2 class="section-title">Чем мы занимаемся</h2>
-     <ul>
+     <ul class="list">
          <li><img src="./images/1.jpg" alt="на столе лежит клавиатура,на которой две руки набирают код в программе перед планшетом и монитором" width="370"></li>
          <li><img src="./images/2.jpg" alt="в левой руке телефон, а правая лежит на ноутбуке с изображениями трех телефонов, который стоит на столе" width="370"></li>
          <li><img src="./images/3.jpg" alt="в левой руке планшет с изображением, а в правой руке стилус на фоне: мышки, клавиатуры,телефона и монитора, которые находятся на столе" width="370"></li>
@@ -93,18 +96,18 @@
 </main>
 
 <!-- Футер -->
-<footer>
-    <a href="/"> <span class="accent">Web</span> <span class="">Studio</span> </a>
+<footer class="footer-works">
+    <a href="/"> <span class="accent">Web</span> <span class="logo">Studio</span> </a>
         <address>
-            <ul>
+            <ul class="footer-local list">
                 <li>
-                    <a href="г.Киев,пр-тЛесиУкраинки,26 ">г. Киев, пр-т Леси Украинки, 26 <br/></a>
+                    <a href="г.Киев,пр-тЛесиУкраинки,26 " class="link actual">г. Киев, пр-т Леси Украинки, 26 <br/></a>
                 </li>
                 <li>
-                    <a href="info@example.com">info@example.com</a>
+                    <a href="info@example.com" class="link">info@example.com</a>
                 </li>
                 <li>
-                    <a href="+380991111111">+38 099 111 11 11</a>
+                    <a href="+380991111111" class="link">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
