--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Шапка -->
     <header> 
      <nav>
-    <a href="/"><span class="accent">Web</span><span class="logo">Studio</span></a>
+    <a class="logo-href" href="/"><span class="accent">Web</span><span class="logo">Studio</span></a>
      <ul class="site-nav list">
          <li><a href="./index.html" class="link current">Студия</a></li>
          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -70,7 +70,7 @@
  <!-- Руководители -->
 <section class="section">
     <h2 class="section-title">Наша команда</h2>
-    <ul>
+    <ul class="list">
          <li>
             <img src="./images/4.jpg" alt="фото дизайнера продукта" width="270">
             <h3 class="section-title">Игорь Демьяненко</h3>
@@ -97,7 +97,7 @@
 
 <!-- Футер -->
 <footer class="footer-works">
-    <a href="/"><span class="accent">Web</span><span class="logo">Studio</span> </a>
+    <a class="logo-href" href="/"><span class="accent">Web</span><span class="logo">Studio</span> </a>
         <address>
             <ul class="footer-local list">
                 <li>
