--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     <ul class="auth-nav list">
          <li><a href="info@devstudio.com" class="link current">info@devstudio.com</a></li>
-         <li><a href="+380961111111" class="link">+38 096 111 11 11</a></li>
+         <li><a href="+380961111111" class="link">+380961111111</a></li>
      </ul>
     </header>
 
@@ -73,22 +73,22 @@
     <ul class="list">
          <li>
             <img src="./images/4.jpg" alt="фото дизайнера продукта" width="270">
-            <h3 class="section-title">Игорь Демьяненко</h3>
+            <h3 class="section-partition">Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
          <li>
             <img src="./images/5.jpg" alt="фото фронтенд разработчика" width="270">
-            <h3 class="section-title">Ольга Репина</h3>
+            <h3 class="section-partition">Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
          <li>
             <img src="./images/6.jpg" alt="фото специалиста по маркетингу" width="270">
-            <h3 class="section-title">Николай Тарасов</h3>
+            <h3 class="section-partition">Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
          <li>
             <img src="./images/7.jpg" alt="фото дизайнера интерфейсов" width="270">
-            <h3 class="section-title">Михаил Ермаков</h3>
+            <h3 class="section-partition">Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
     </ul>
