--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -28,9 +31,10 @@
  <!-- Герой -->
  <main>
     <section>
-         <ul>
+       <h1 class="filter-part"> наполнение страницы</h1>
+         <ul class="filter-list">
              <li>
-                <button type="button" class="button primary">Все</button>
+                <button type="button" class="button secondary">Все</button>
              </li>
              <li>
                 <button type="button" class="button secondary">Веб-сайты</button>
@@ -46,70 +50,70 @@
              </li>
              <li>
                 <img src="./images/portfolio6.jpg" alt="ноутбук" width="370">
-                <h2 class="section-title">Технокряк</h2>
+                <h2 class="title">Технокряк</h2>
                 <p>Веб-сайт</p>
              </li>
              <li>
                 <img src="./images/portfolio1.jpg" alt="два парня играют мячом в баскетбол" width="370">
-                <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>  
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>  
              </li>
              <li>
                 <img src="./images/portfolio2.jpg" alt="логотип ресторана" width="370">
-                <h2 class="section-title">Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="text">Приложение</p>
              </li>
              <li>
                 <img src="./images/portfolio3.jpg" alt="наушники" width="370">
-                <h2 class="section-title">Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="title">Проект Prime</h2>
+                <p class="text">Маркетинг</p>
              </li>
              <li>
                 <img src="./images/portfolio4.jpg" alt="одна коричневая и одна белая коробочки" width="370">
-                <h2 class="section-title">Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="title">Проект Boxes</h2>
+                <p class="text">Приложение</p>
              </li>
              <li>
                 <img src="./images/portfolio5.jpg" alt="монитор" width="370">
-                <h2 class="section-title">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
              </li>
              <li>
                 <img src="./images/portfolio7.jpg" alt="книга" width="370">
-                <h2 class="section-title">Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="title">Издание Limited Edition</h2>
+                <p class="text">Дизайн</p>
              </li>
              <li>
                 <img src="./images/portfolio8.jpg" alt="белая бирка с английскими буквами на коричневой веревке" width="370">
-                <h2 class="section-title">Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="title">Проект LAB</h2>
+                <p class="text">Маркетинг</p>
              </li>
              <li>
                 <img src="./images/portfolio9.jpg" alt="две руки лежат на клавиатуре ноутбука" width="370">
-                <h2 class="section-title">Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="title">Growing Business</h2>
+                <p class="text">Приложение</p>
              </li>
          </ul>
      </section>
  </main>
    
    <!-- Футер -->
-   <footer>
-       <a href="/"> <span class="accent">Web</span> <span class="">Studio</span> </a>
-           <address>
-               <ul>
-                   <li>
-                       <a href="г.Киев,пр-тЛесиУкраинки,26 ">г. Киев, пр-т Леси Украинки, 26 <br/></a>
-                   </li>
-                   <li>
-                       <a href="info@example.com">info@example.com</a>
-                   </li>
-                   <li>
-                       <a href="+380991111111">+38 099 111 11 11</a>
-                   </li>
-               </ul>
-           </address>
-   </footer>
-    
+   <footer class="footer-works">
+      <a class="logo-href" href="/"><span class="accent">Web</span><span class="logo">Studio</span> </a>
+          <address>
+              <ul class="footer-local list">
+                  <li>
+                      <a href="г.Киев,пр-тЛесиУкраинки,26 " class="link actual">г. Киев, пр-т Леси Украинки, 26 <br/></a>
+                  </li>
+                  <li>
+                      <a href="info@example.com" class="link">info@example.com</a>
+                  </li>
+                  <li>
+                      <a href="+380991111111" class="link">+38 099 111 11 11</a>
+                  </li>
+              </ul>
+          </address>
+  </footer>
+
 </body>
 </html>
