--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       <!-- Шапка -->
     <header> 
     <nav>
-    <a href="/"> <span class="accent">Web</span> <span class="logo">Studio</span></a>
+    <a class="logo-href" href="/"><span class="accent">Web</span><span class="logo">Studio</span></a>
     <ul class="site-nav list">
             <li><a href="./index.html" class="link">Студия</a></li>
             <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
