--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <ul class="feature-list">
          <li>
              <h3 class="title">Внимание к деталям</h3>
-             <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
          </li> 
          <li>
              <h3 class="title"> Пунктуальность</h3>
@@ -74,22 +74,22 @@
          <li>
             <img src="./images/4.jpg" alt="фото дизайнера продукта" width="270">
             <h3 class="section-partition">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="text">Product Designer</p>
         </li>
          <li>
             <img src="./images/5.jpg" alt="фото фронтенд разработчика" width="270">
             <h3 class="section-partition">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
         </li>
          <li>
             <img src="./images/6.jpg" alt="фото специалиста по маркетингу" width="270">
             <h3 class="section-partition">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
         </li>
          <li>
             <img src="./images/7.jpg" alt="фото дизайнера интерфейсов" width="270">
             <h3 class="section-partition">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="text">UI Designer</p>
         </li>
     </ul>
 </section>
